# display_bci_2d

./: .gitignore  README.md  requirements.txt  setup.cfg
assets/: pixels.ppm
bci.egg-info/: PKG-INFO  SOURCES.txt
docs/source/: bci.rst  conf.py  index.rst  modules.rst
settings/: led_matrix.toml
src/: main.py
src/bci/: display.py  graphics.py  neopixel.py
