[metadata]
name = bci
version = 0.1
author = Rafael Schultz
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE

[options]
packages = find:
package_data =
    = settings/*.toml

[options.packages.find]
include = 
    src/bci